[gd_scene load_steps=9 format=2]

[ext_resource path="res://GFX/image_box_speaker.png" type="Texture" id=1]
[ext_resource path="res://GFX/dialogue_icon.png" type="Texture" id=2]
[ext_resource path="res://GFX/image_box.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Other_Scenes/Dialogue.gd" type="Script" id=4]
[ext_resource path="res://Fonts/simply-sans.book.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 975, 570 ), Vector2( 975, 576 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 933, 145 ) ]
}

[node name="Dialogue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 327.0
size_flags_horizontal = 3
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Speaker" type="Control" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 60.0
rect_min_size = Vector2( 30, 60 )
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Speaker"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -822.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="Speaker_Name" type="RichTextLabel" parent="VBoxContainer/Speaker/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center] Layton [/center]"
text = " Layton "

[node name="Dialogue_Box" type="CanvasLayer" parent="VBoxContainer"]

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Dialogue_Box"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 387.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="Dialogue_Text" type="RichTextLabel" parent="VBoxContainer/Dialogue_Box/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="Tween" type="Tween" parent="VBoxContainer/Dialogue_Box"]

[node name="DialogueIcon" type="Sprite" parent="VBoxContainer/Dialogue_Box"]
position = Vector2( 933, 145 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/Dialogue_Box/DialogueIcon"]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[connection signal="tween_completed" from="VBoxContainer/Dialogue_Box/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
